add commands handler

--- a/config-development.json
+++ b/config-development.json
@@ -1,6 +1,6 @@
 {
     "discord": {
-        "replay-messages": "true"
+        "replay-messages": "false"
     },
     "logging": {
         "level": "info"
