--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,23 @@
 services:
   bot:
     image: ano-py-bot:runtime
-    build: .
+    build: ./app
     environment:
       - PyBotToken=${PyBotToken}
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - POSTGRES_DB=${POSTGRES_DB}
     volumes:
       - ./logs:/app/logs
+  
+  db:
+    image: postgres:bullseye
+    restart: always
+    environment:
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - POSTGRES_DB=${POSTGRES_DB}
+    ports:
+      - 5432:5432
+    volumes:
+      - ./db-data:/var/lib/postgresql/data
