--- a/app/config/config.json
+++ b/app/config/config.json
@@ -11,5 +11,5 @@
             "215044487871725573"
         ]
     },
-    "connection-string": "postgresql://{user}:{password}@db:5432/{database}"
+    "connection-string": "postgresql+psycopg2://{user}:{password}@db:{port}/{database}"
 }
