--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,11 +2,15 @@ services:
   bot:
     image: ano-py-bot:runtime
     build: ./app
+    command: bash -c "alembic upgrade head && python main.py"
     environment:
       - PyBotToken=${PyBotToken}
       - POSTGRES_USER=${POSTGRES_USER}
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
       - POSTGRES_DB=${POSTGRES_DB}
+      - POSTGRES_PORT=${POSTGRES_PORT}
+    depends_on:
+      - db
     volumes:
       - ./logs:/app/logs
 
@@ -18,6 +22,6 @@ services:
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
       - POSTGRES_DB=${POSTGRES_DB}
     ports:
-      - 5432:5432
+      - ${POSTGRES_PORT}:5432
     volumes:
       - ./db-data:/var/lib/postgresql/data
