fix: finish up database setup

--- a/app/config/config-development.json
+++ b/app/config/config-development.json
@@ -1,6 +1,6 @@
 {
     "discord": {
-        "replay-messages": "false"
+        "replay-messages": "true"
     },
     "logging": {
         "level": "info"
