--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,8 +11,25 @@ services:
       - POSTGRES_PORT=${POSTGRES_PORT}
     depends_on:
       - db
+      - lavalink
+    networks:
+      - lavalink
     volumes:
       - ./logs:/app/logs
+
+  lavalink:
+    image: ghcr.io/lavalink-devs/lavalink:3.7.8-alpine # pin the image version to Lavalink v4
+    container_name: lavalink
+    restart: unless-stopped
+    environment:
+      - _JAVA_OPTIONS=-Xmx6G # set Java options here
+      - SERVER_PORT=2333 # set lavalink server port
+      - LAVALINK_SERVER_PASSWORD=youshallnotpass # set password for lavalink
+    volumes:
+      - ./lavalink/application.yml:/opt/Lavalink/application.yml # mount application.yml from the same directory or use environment variables
+      - ./plugins/:/opt/Lavalink/plugins/ # persist plugins between restarts, make sure to set the correct permissions (user: 322, group: 322)
+    networks:
+      - lavalink
 
   db:
     image: postgres:15-bullseye
@@ -25,3 +42,10 @@ services:
       - 6543:${POSTGRES_PORT}
     volumes:
       - ./db-data:/var/lib/postgresql/data
+    networks:
+      - lavalink
+
+networks:
+  lavalink:
+    # create a lavalink network you can add other containers to, to give them access to Lavalink
+    name: lavalink
