--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ services:
   bot:
     image: ano-py-bot:runtime
     build: ./app
-    command: bash -c "alembic upgrade head && python main.py"
+    command: bash -c "alembic upgrade head && python main.py prod"
     restart: always
     environment:
       - PYBOTTOKEN=${PYBOTTOKEN}
@@ -10,6 +10,7 @@ services:
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
       - POSTGRES_DB=${POSTGRES_DB}
       - POSTGRES_PORT=${POSTGRES_PORT}
+      - IS_PROD=${IS_PROD}
     depends_on:
       - db
       - lavalink
