--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 services:
   bot:
     image: ano-py-bot:runtime
-    build: ./app
+    build: ./bot
     command: bash -c "alembic upgrade head && python bot.py"
     restart: always
     environment:
