--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -66,9 +66,9 @@ jobs:
 
       - name: Copy remote_files directory to server
         run: |
-          scp -i ~/.ssh/bot.key -o StrictHostKeyChecking=no deploy.sh $SSH_USER@$SSH_HOST:/AnoPyBot
-          scp -i ~/.ssh/bot.key -o StrictHostKeyChecking=no lavalink/ $SSH_USER@$SSH_HOST:/AnoPyBot
-          scp -i ~/.ssh/bot.key -o StrictHostKeyChecking=no docker-compose.yml $SSH_USER@$SSH_HOST:/AnoPyBot
+          scp -i ~/.ssh/bot.key -o StrictHostKeyChecking=no deploy.sh $SSH_USER@$SSH_HOST:/AnoPyBot/deploy.sh
+          scp -i ~/.ssh/bot.key -o StrictHostKeyChecking=no lavalink/ $SSH_USER@$SSH_HOST:/AnoPyBot/lavalink/
+          scp -i ~/.ssh/bot.key -o StrictHostKeyChecking=no docker-compose.yml $SSH_USER@$SSH_HOST:/AnoPyBot/docker-compose.yml
 
       - name: Deploy to server
         # Configure the ~./bash_profile and deploy.sh file on the Vagrantfile
