--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -68,6 +68,12 @@ jobs:
         run: >
           ssh $SSH_USER@$SSH_HOST
           -i ~/.ssh/bot.key -o StrictHostKeyChecking=no
+          "export IS_PROD=$IS_PROD"
+          "export POSTGRES_USER=$POSTGRES_USER"
+          "export POSTGRES_PASSWORD=$POSTGRES_PASSWORD"
+          "export POSTGRES_DB=$POSTGRES_DB"
+          "export POSTGRES_PORT=$POSTGRES_PORT"
+          "export PYBOTTOKEN=$PYBOTTOKEN"
           'cd /AnoPyBot; /AnoPyBot/deploy.sh'
         env:
           IS_PROD: ${{ vars.IS_PROD }}
