--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -59,10 +59,7 @@ jobs:
 
       - name: Copy remote_files directory to server
         run: |
-          scp -i ~/.ssh/bot.key -o StrictHostKeyChecking=no deploy.sh $SSH_USER@$SSH_HOST:/AnoPyBot/deploy.sh
-          scp -i ~/.ssh/bot.key -o StrictHostKeyChecking=no -r lavalink/ $SSH_USER@$SSH_HOST:/AnoPyBot/lavalink/
-          scp -i ~/.ssh/bot.key -o StrictHostKeyChecking=no docker-compose.yml $SSH_USER@$SSH_HOST:/AnoPyBot/docker-compose.yml
-          scp -i ~/.ssh/bot.key -o StrictHostKeyChecking=no bot/config/config.yml $SSH_USER@$SSH_HOST:/AnoPyBot/bot
+          scp -i ~/.ssh/bot.key -o StrictHostKeyChecking=no -r remote_files/ $SSH_USER@$SSH_HOST:/AnoPyBot/
 
       - name: Create .env file
         run: >  
