--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,8 +12,10 @@ services:
       - POSTGRES_PORT=${POSTGRES_PORT}
       - IS_PROD=${IS_PROD}
     depends_on:
-      - db
-      - lavalink
+        lavalink:
+          condition: service_started
+        db:
+          condition: service_healthy  
     networks:
       - lavalink
     volumes:
@@ -38,6 +40,12 @@ services:
   db:
     image: postgres:15-bullseye
     restart: always
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready", "-d", "${POSTGRES_DB}"]
+      interval: 1m30s
+      timeout: 30s
+      retries: 5
+      start_period: 30s
     environment:
       - POSTGRES_USER=${POSTGRES_USER}
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
