--- a/remote_files/docker-compose.yml
+++ b/remote_files/docker-compose.yml
@@ -1,6 +1,7 @@
 services:
   bot:
     image: mikkelnilsson/ano-py-bot:runtime
+    build: ../bot
     command: bash -c "alembic upgrade head && python bot.py"
     restart: always
     environment:
@@ -10,13 +11,15 @@ services:
       - POSTGRES_DB=${POSTGRES_DB}
       - POSTGRES_PORT=${POSTGRES_PORT}
       - IS_PROD=${IS_PROD}
+      - LAVALINK_PASSWORD=${LAVALINK_PASSWORD}
+      - LAVALINK_PORT=${LAVALINK_PORT}
     depends_on:
-      - db
       - lavalink
+      - db
     networks:
       - lavalink
     volumes:
-      - /mnt/mmnilsson_vol/logs:/app/logs
+      - ${LOG_MOUNT_LOCATION}:/app/logs
 
   lavalink:
     image: ghcr.io/lavalink-devs/lavalink:3.7.8-alpine # pin the image version to Lavalink v4
@@ -24,13 +27,12 @@ services:
     restart: unless-stopped
     environment:
       - _JAVA_OPTIONS=-Xmx6G # set Java options here
-      - SERVER_PORT=2333 # set lavalink server port
-      - LAVALINK_SERVER_PASSWORD=youshallnotpass # set password for lavalink
+      - SERVER_PORT=${LAVALINK_PORT} # set lavalink server port
+      - LAVALINK_SERVER_PASSWORD=${LAVALINK_PASSWORD} # set password for lavalink
     ports:
-      - 2333:2333
+      - ${LAVALINK_PORT}:${LAVALINK_PORT}
     volumes:
       - ./lavalink/application.yml:/opt/Lavalink/application.yml # mount application.yml from the same directory or use environment variables
-      - ./lavalink/plugins/:/opt/Lavalink/plugins/ # persist plugins between restarts, make sure to set the correct permissions (user: 322, group: 322)
     networks:
       - lavalink
 
@@ -44,7 +46,7 @@ services:
     ports:
       - 6543:${POSTGRES_PORT}
     volumes:
-      - /mnt/mmnilsson_vol/db-data:/var/lib/postgresql/data
+      - ${POSTGRES_DATA_MOUNT_LOCATION}:/var/lib/postgresql/data
     networks:
       - lavalink
 
