--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -52,13 +52,13 @@ jobs:
 
       - name: Copy remote_files directory to server
         run: |
-          scp -i ~/.ssh/bot.key -o StrictHostKeyChecking=no -r ./remote_files/. $SSH_USER@$SSH_HOST:/AnoPyBot/
+          scp -i ~/.ssh/bot.key -o StrictHostKeyChecking=no -r remote_files/ $SSH_USER@$SSH_HOST:/AnoPyBot/
 
       - name: Create .env file
         run: >  
           ssh $SSH_USER@$SSH_HOST
           -i ~/.ssh/bot.key -o StrictHostKeyChecking=no
-          "echo -e \"IS_PROD=$IS_PROD\\nPOSTGRES_USER=$POSTGRES_USER\\nPOSTGRES_PASSWORD=$POSTGRES_PASSWORD\\nPOSTGRES_DB=$POSTGRES_DB\\nPOSTGRES_PORT=$POSTGRES_PORT\\nPYBOTTOKEN=$PYBOTTOKEN\\nPOSTGRES_DATA_MOUNT_LOCATION=$POSTGRES_DATA_MOUNT_LOCATION\\nLOG_MOUNT_LOCATION=$LOG_MOUNT_LOCATION\\nLAVALINK_PORT=$LAVALINK_PORT\\nLAVALINK_PASSWORD=$LAVALINK_PASSWORD\" > /AnoPyBot/.env"
+          "echo -e \"IS_PROD=$IS_PROD\\nPOSTGRES_USER=$POSTGRES_USER\\nPOSTGRES_PASSWORD=$POSTGRES_PASSWORD\\nPOSTGRES_DB=$POSTGRES_DB\\nPOSTGRES_PORT=$POSTGRES_PORT\\nPYBOTTOKEN=$PYBOTTOKEN\\nPOSTGRES_DATA_MOUNT_LOCATION=$POSTGRES_DATA_MOUNT_LOCATION\\nLOG_MOUNT_LOCATION=$LOG_MOUNT_LOCATION\\nLAVALINK_PORT=$LAVALINK_PORT\\nLAVALINK_PASSWORD=$LAVALINK_PASSWORD\" > /AnoPyBot/remote_files/.env"
         env:
           IS_PROD: ${{ vars.IS_PROD }}
           POSTGRES_USER: ${{ secrets.POSTGRES_USER }}
@@ -76,7 +76,7 @@ jobs:
           ssh $SSH_USER@$SSH_HOST
           -i ~/.ssh/bot.key -o StrictHostKeyChecking=no
           "docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD;
-          cd /AnoPyBot; /AnoPyBot/deploy.sh"
+          cd /AnoPyBot/remote_files; /AnoPyBot/remote_files/deploy.sh"
         env:
           DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
           DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
