--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -68,7 +68,7 @@ jobs:
           PYBOTTOKEN: ${{ secrets.PYBOTTOKEN }}
           POSTGRES_DATA_MOUNT_LOCATION: ${{ secrets.POSTGRES_DATA_MOUNT_LOCATION }}
           LOG_MOUNT_LOCATION: ${{ secrets.LOG_MOUNT_LOCATION }}
-          LAVALLINK_PORT: ${{ secrets.LAVALINK_PORT }}
+          LAVALINK_PORT: ${{ secrets.LAVALINK_PORT }}
           LAVALINK_PASSWORD: ${{ secrets.LAVALINK_PASSWORD }}
 
       - name: Deploy to server
