--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -76,7 +76,7 @@ jobs:
           ssh $SSH_USER@$SSH_HOST
           -i ~/.ssh/bot.key -o StrictHostKeyChecking=no
           "docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD;
-          cd /AnoPyBot; mv /AnoPyBot/remote_files/* AnoPyBot/; /AnoPyBot/deploy.sh"
+          mv /AnoPyBot/remote_files/* /AnoPyBot/; /AnoPyBot/deploy.sh"
         env:
           DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
           DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
