--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -66,7 +66,7 @@ jobs:
           anobot_LAVALINK_PASSWORD: ${{ secrets.LAVALINK_PASSWORD }}
           anobot_YOUTUBE_EMAIL: ${{ secrets.YOUTUBE_EMAIL }}
           anobot_YOUTUBE_PASSWORD: ${{ secrets.YOUTUBE_PASSWORD }}
-          env_location: "/AnoPyBot/"
+          ENV_LOCATION: "/AnoPyBot/"
 
       - name: Copy remote_files directory to server
         run: |
