--- a/remote_files/docker-compose.yml
+++ b/remote_files/docker-compose.yml
@@ -22,7 +22,7 @@ services:
       - ${LOG_MOUNT_LOCATION}:/app/logs
 
   lavalink:
-    image: ghcr.io/lavalink-devs/lavalink:4 # pin the image version to Lavalink v4
+    image: ghcr.io/lavalink-devs/lavalink:v4-update-lp # pin the image version to Lavalink v4
     container_name: lavalink
     restart: unless-stopped
     environment:
