--- a/remote_files/lavalink/application.yml
+++ b/remote_files/lavalink/application.yml
@@ -6,11 +6,11 @@ plugins:
 #    another_key: another_value
   youtube:
     enabled: true
-    clients: ["MUSIC", "ANDROID", "WEB", "TVHTML5EMBEDDED"]
+    clients: ["MUSIC", "ANDROID_TESTSUITE", "WEB", "TVHTML5EMBEDDED"]
 lavalink:
   plugins:
-    - dependency: "dev.lavalink.youtube:youtube-plugin:1.5.0"
-      snapshot: false # Set to true if you want to use a snapshot version.
+    - dependency: "dev.lavalink.youtube:youtube-plugin:c0bfb37547af8cd61cdb7894efdf0d26c901073a"
+      snapshot: true # Set to true if you want to use a snapshot version.
   pluginsDir: "./plugins"
   server:
     sources:
