--- a/remote_files/docker-compose.yml
+++ b/remote_files/docker-compose.yml
@@ -31,6 +31,11 @@ services:
       - LAVALINK_SERVER_PASSWORD=${LAVALINK_PASSWORD} # set password for lavalink
       - LAVALINK_SERVER_YOUTUBE_CONFIG_EMAIL=${YOUTUBE_EMAIL}
       - LAVALINK_SERVER_YOUTUBE_CONFIG_PASSWORD=${YOUTUBE_PASSWORD}
+      - LAVALINK_SERVER_RATELIMIT_IP_BLOCKS=${LAVALINK_IP_BLOCKS}
+      - LAVALINK_SERVER_RATELIMIT_EXCLUDE_IPS=${LAVALINK_EXCLUDE_IPS}
+      - LAVALINK_SERVER_RATELIMIT_STRATEGY=${LAVALINK_STRATEGY}
+      - LAVALINK_SERVER_RATELIMIT_SEARCH_TRIGGERS_FAIL=${LAVALINK_SEARCH_TRIGGERS_FAIL}
+      - LAVALINK_SERVER_RATELIMIT_RETRY_LIMIT=${LAVALINK_RETRY_LIMIT}
     ports:
       - ${LAVALINK_PORT}:${LAVALINK_PORT}
     volumes:
