--- a/remote_files/lavalink/application.yml
+++ b/remote_files/lavalink/application.yml
@@ -6,6 +6,9 @@ plugins:
 #    another_key: another_value
   youtube:
     enabled: true
+    allowSearch: true
+    allowDirectVideoIds: true
+    allowDirectPlaylistIds: true
     clients: ["MUSIC", "ANDROID_TESTSUITE", "WEB", "TVHTML5EMBEDDED"]
 lavalink:
   plugins:
