--- a/bot/config/config.yml
+++ b/bot/config/config.yml
@@ -11,4 +11,4 @@ bot:
     owners: [
         215044487871725573
     ]
-connection-string: "postgresql+psycopg2://{user}:{password}@db:{port}/{database}"
+connection-string: "postgresql+psycopg2://{user}:{password}@0.0.0.0:{port}/{database}"
